# myorishop

./: .dockerignore  .env.example  .env.production.example  .gitignore  CLAUDE.md  Dockerfile  README.md  agent.md  docker-compose.prod.yml  import_dictionary.bat  install.bat  pyproject.toml  reset_demo_data.bat  restore.bat  run.bat  seed_demo_data.bat
.planning/: .continue-here.md  HANDOFF.json  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.1-PHASES-7-8-INTERIM-AUDIT.md  v2.0-PHASES-18-20-INTERIM-AUDIT.md  v3.0-MILESTONE-AUDIT.md
alembic/: env.py
app/: __init__.py  config.py  core.py  db.py  device_id.py  main.py  models.py
catalogs/: 01-2024.xlsx  01-2025_calc.xlsx  01-2026.xlsx  01-2026_.xlsx  02-2024.xlsx  02-2025.xlsx  02-2026.xlsx  03-2025-calc.xlsx  03-2026.xlsx  03_2024.xlsx  04-2024.xlsx  04-2025_calc.xlsx  04-2026.xlsx  05-2024.xlsx  05-2025.xlsx  05-2026.xlsx  06-2024.xlsx  06-2026.xlsx  07-2024.xlsx  07-2026.xlsx  08-2024.xlsx  08-2025.xlsx  08-2026.xlsx  09-2025_.xlsx  09-2026.xlsx  09_2024.xlsx  10-2024.xlsx  10-2025.xlsx  10-2026.xlsx  12-2024-calc.xlsx  12-2025_.xlsx  13-2024.xlsx  14-2024.xlsx  14-2025.xlsx  15-2024.xlsx  15-2025.xlsx  16-2024-calc.xlsx  16-2025.xlsx  17-2024-calc.xlsx  17-2025_.xlsx  (+3 more)
deploy/: Caddyfile  Caddyfile.ori-block  DEPLOY.md  DEPLOY.s1.md  docker-entrypoint.sh  myorishop-pgbackup.service  myorishop-pgbackup.sh  myorishop-pgbackup.timer  myorishop.service
scripts/: import_catalogs.py  import_master_pricelist.py  import_prices.py  load_test_data.py  reset_demo_data.py  (+2 more)
(+979 files in other folders)
