[project]
name = "myorishop"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.18.*",
    "argon2-cffi==25.1.*",
    "fastapi==0.139.*",
    "itsdangerous==2.2.*",
    "jinja2==3.1.*",
    "psycopg[binary]==3.3.*",
    "pydantic-settings==2.14.*",
    "python-multipart==0.0.32",
    "sqlalchemy==2.0.*",
    "tzdata>=2026.2",
    "uvicorn[standard]==0.51.*",
]

[dependency-groups]
dev = [
    "httpx==0.28.*",
    "openpyxl>=3.1.5",
    "pytest==9.1.*",
    "ruff==0.15.*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection pattern requires calls in argument defaults.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Form", "fastapi.Query"]
